{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 59,
  "lineage": "82512799-883e-199d-a02a-4e9390cc0cff",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "router_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.82.73.93",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-13T01:49:28.383-08:00",
            "id": "projects/web-searcher-2026/regions/us-west1/addresses/box-router-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "box-router-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "web-searcher-2026",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/addresses/box-router-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "runner_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.197.101.50",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-13T01:49:29.038-08:00",
            "id": "projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-0",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "box-runner-ip-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "web-searcher-2026",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-0"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.127.105.254",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-13T01:49:29.300-08:00",
            "id": "projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-1",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "box-runner-ip-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "web-searcher-2026",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "136.109.132.159",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-13T01:49:27.718-08:00",
            "id": "projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-2",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "box-runner-ip-2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "web-searcher-2026",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-2"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address": "34.168.236.2",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-13T01:49:29.037-08:00",
            "id": "projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-3",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "box-runner-ip-3",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "web-searcher-2026",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-3"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "address": "34.169.188.79",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-13T01:49:29.037-08:00",
            "id": "projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-4",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "box-runner-ip-4",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "web-searcher-2026",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/addresses/box-runner-ip-4"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/instanceGroups/box-router-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-13T01:51:07.477-08:00",
            "enable_cdn": false,
            "fingerprint": "eg1VpG1580k=",
            "generated_id": 5158063654642101092,
            "health_checks": [
              "projects/web-searcher-2026/global/healthChecks/box-router-hc"
            ],
            "id": "projects/web-searcher-2026/global/backendServices/box-router-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "box-router-backend",
            "port_name": "http",
            "project": "web-searcher-2026",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/securityPolicies/box-router-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/backendServices/box-router-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.router_ip",
            "google_compute_address.runner_ips",
            "google_compute_health_check.router",
            "google_compute_instance.router",
            "google_compute_instance.runner",
            "google_compute_instance_group.router_group",
            "google_compute_network.vpc",
            "google_compute_security_policy.router_policy",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-13T01:49:49.143-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/web-searcher-2026/global/firewalls/box-allow-internal",
            "log_config": [],
            "name": "box-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
            "priority": 1000,
            "project": "web-searcher-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/firewalls/box-allow-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "box-router",
              "box-runner"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb_health",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-13T01:49:49.296-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/web-searcher-2026/global/firewalls/box-allow-lb-health",
            "log_config": [],
            "name": "box-allow-lb-health",
            "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
            "priority": 1000,
            "project": "web-searcher-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/firewalls/box-allow-lb-health",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "box-router"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-13T01:49:49.251-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/web-searcher-2026/global/firewalls/box-allow-ssh",
            "log_config": [],
            "name": "box-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
            "priority": 1000,
            "project": "web-searcher-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/firewalls/box-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.49.91.205",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-13T01:49:27.700-08:00",
            "id": "projects/web-searcher-2026/global/addresses/box-router-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "box-router-lb-ip",
            "prefix_length": 0,
            "project": "web-searcher-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/addresses/box-router-lb-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "router_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/web-searcher-2026/global/forwardingRules/box-router-http-fw",
            "ip_address": "34.49.91.205",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "box-router-http-fw",
            "port_range": "80-80",
            "project": "web-searcher-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/forwardingRules/box-router-http-fw",
            "target": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/targetHttpProxies/box-router-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.router_ip",
            "google_compute_address.runner_ips",
            "google_compute_backend_service.router",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.router",
            "google_compute_instance.router",
            "google_compute_instance.runner",
            "google_compute_instance_group.router_group",
            "google_compute_network.vpc",
            "google_compute_security_policy.router_policy",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.router",
            "google_compute_url_map.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/disks/box-router"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/web-searcher-2026/zones/us-west1-a/instances/box-router",
            "instance_id": "2256613332646341509",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "II7I6ETHHBU=",
            "metadata_startup_script": "#!/usr/bin/env bash\nset -euo pipefail\n\nIMAGE=\"ghcr.io/pe-monitor/box-router:latest\"\nSERVICE_NAME=\"box-router\"\nRUNNER_URLS=\"http://10.0.0.2:8000,http://10.0.0.5:8000,http://10.0.0.6:8000,http://10.0.0.4:8000,http://10.0.0.3:8000\"\n\napt-get update -y\napt-get install -y docker.io\nsystemctl enable docker\nsystemctl start docker\n\ncat \u003c\u003cUNIT \u003e /etc/systemd/system/${SERVICE_NAME}.service\n[Unit]\nDescription=Box Router\nAfter=networ [...]
            "name": "box-router",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.82.73.93",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
                "network_ip": "10.0.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/subnetworks/box-subnet",
                "subnetwork_project": "web-searcher-2026"
              }
            ],
            "project": "web-searcher-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/instances/box-router",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "box-router"
            ],
            "tags_fingerprint": "2vpsk0F9kv0=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.router_ip",
            "google_compute_address.runner_ips",
            "google_compute_instance.runner",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/disks/box-runner-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-0",
            "instance_id": "6714677089679420326",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "jB6rc2OjKIg=",
            "metadata_startup_script": "#!/usr/bin/env bash\nset -euo pipefail\n\nIMAGE=\"ghcr.io/pe-monitor/box:latest\"\nSERVICE_NAME=\"box-runner\"\nCHROME_DEBUG_PORT=\"9225\"\n\napt-get update -y\napt-get install -y docker.io\nsystemctl enable docker\nsystemctl start docker\n\ncat \u003c\u003cUNIT \u003e /etc/systemd/system/${SERVICE_NAME}.service\n[Unit]\nDescription=Box Runner (FastAPI + Chromium)\nAfter=network.target docker.service\nRequires=docker.service\n\n[Service]\nType=simple\nRest [...]
            "name": "box-runner-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.197.101.50",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/subnetworks/box-subnet",
                "subnetwork_project": "web-searcher-2026"
              }
            ],
            "project": "web-searcher-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "box-runner"
            ],
            "tags_fingerprint": "DrYkmpl8dkc=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.runner_ips",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/disks/box-runner-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-1",
            "instance_id": "6823862734666050471",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "jB6rc2OjKIg=",
            "metadata_startup_script": "#!/usr/bin/env bash\nset -euo pipefail\n\nIMAGE=\"ghcr.io/pe-monitor/box:latest\"\nSERVICE_NAME=\"box-runner\"\nCHROME_DEBUG_PORT=\"9225\"\n\napt-get update -y\napt-get install -y docker.io\nsystemctl enable docker\nsystemctl start docker\n\ncat \u003c\u003cUNIT \u003e /etc/systemd/system/${SERVICE_NAME}.service\n[Unit]\nDescription=Box Runner (FastAPI + Chromium)\nAfter=network.target docker.service\nRequires=docker.service\n\n[Service]\nType=simple\nRest [...]
            "name": "box-runner-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.127.105.254",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/subnetworks/box-subnet",
                "subnetwork_project": "web-searcher-2026"
              }
            ],
            "project": "web-searcher-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "box-runner"
            ],
            "tags_fingerprint": "DrYkmpl8dkc=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.runner_ips",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/disks/box-runner-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-2",
            "instance_id": "4626574066081049510",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "jB6rc2OjKIg=",
            "metadata_startup_script": "#!/usr/bin/env bash\nset -euo pipefail\n\nIMAGE=\"ghcr.io/pe-monitor/box:latest\"\nSERVICE_NAME=\"box-runner\"\nCHROME_DEBUG_PORT=\"9225\"\n\napt-get update -y\napt-get install -y docker.io\nsystemctl enable docker\nsystemctl start docker\n\ncat \u003c\u003cUNIT \u003e /etc/systemd/system/${SERVICE_NAME}.service\n[Unit]\nDescription=Box Runner (FastAPI + Chromium)\nAfter=network.target docker.service\nRequires=docker.service\n\n[Service]\nType=simple\nRest [...]
            "name": "box-runner-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.109.132.159",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
                "network_ip": "10.0.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/subnetworks/box-subnet",
                "subnetwork_project": "web-searcher-2026"
              }
            ],
            "project": "web-searcher-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "box-runner"
            ],
            "tags_fingerprint": "DrYkmpl8dkc=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.runner_ips",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/disks/box-runner-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-3",
            "instance_id": "7374693454314187686",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "jB6rc2OjKIg=",
            "metadata_startup_script": "#!/usr/bin/env bash\nset -euo pipefail\n\nIMAGE=\"ghcr.io/pe-monitor/box:latest\"\nSERVICE_NAME=\"box-runner\"\nCHROME_DEBUG_PORT=\"9225\"\n\napt-get update -y\napt-get install -y docker.io\nsystemctl enable docker\nsystemctl start docker\n\ncat \u003c\u003cUNIT \u003e /etc/systemd/system/${SERVICE_NAME}.service\n[Unit]\nDescription=Box Runner (FastAPI + Chromium)\nAfter=network.target docker.service\nRequires=docker.service\n\n[Service]\nType=simple\nRest [...]
            "name": "box-runner-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.168.236.2",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/subnetworks/box-subnet",
                "subnetwork_project": "web-searcher-2026"
              }
            ],
            "project": "web-searcher-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "box-runner"
            ],
            "tags_fingerprint": "DrYkmpl8dkc=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.runner_ips",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/disks/box-runner-4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-4",
            "instance_id": "7424946886664760230",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "jB6rc2OjKIg=",
            "metadata_startup_script": "#!/usr/bin/env bash\nset -euo pipefail\n\nIMAGE=\"ghcr.io/pe-monitor/box:latest\"\nSERVICE_NAME=\"box-runner\"\nCHROME_DEBUG_PORT=\"9225\"\n\napt-get update -y\napt-get install -y docker.io\nsystemctl enable docker\nsystemctl start docker\n\ncat \u003c\u003cUNIT \u003e /etc/systemd/system/${SERVICE_NAME}.service\n[Unit]\nDescription=Box Runner (FastAPI + Chromium)\nAfter=network.target docker.service\nRequires=docker.service\n\n[Service]\nType=simple\nRest [...]
            "name": "box-runner-4",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.169.188.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/subnetworks/box-subnet",
                "subnetwork_project": "web-searcher-2026"
              }
            ],
            "project": "web-searcher-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/zones/us-west1-a/instances/box-runner-4",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "box-runner"
            ],
            "tags_fingerprint": "DrYkmpl8dkc=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.runner_ips",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/web-searcher-2026/global/networks/box-vpc",
            "mtu": 0,
            "name": "box-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "577192617814240200",
            "project": "web-searcher-2026",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "router_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "QK6DzyEjsM8=",
            "id": "projects/web-searcher-2026/global/securityPolicies/box-router-policy",
            "name": "box-router-policy",
            "project": "web-searcher-2026",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "request.headers['x-api-key'] == '28355ce8d64a54bf65dee440184e58e9b8f914f5c8c6f710'"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 900,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "",
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 60,
                        "interval_sec": 60
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/securityPolicies/box-router-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-13T01:49:49.389-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/web-searcher-2026/regions/us-west1/subnetworks/box-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "box-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/networks/box-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "web-searcher-2026",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/regions/us-west1/subnetworks/box-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-13T01:52:22.682-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/web-searcher-2026/global/targetHttpProxies/box-router-http-proxy",
            "name": "box-router-http-proxy",
            "project": "web-searcher-2026",
            "proxy_bind": false,
            "proxy_id": 3576934773912480569,
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/targetHttpProxies/box-router-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/urlMaps/box-router-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.router_ip",
            "google_compute_address.runner_ips",
            "google_compute_backend_service.router",
            "google_compute_health_check.router",
            "google_compute_instance.router",
            "google_compute_instance.runner",
            "google_compute_instance_group.router_group",
            "google_compute_network.vpc",
            "google_compute_security_policy.router_policy",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-13T01:52:11.507-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/backendServices/box-router-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "c6HeQbTTtjE=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/web-searcher-2026/global/urlMaps/box-router-url-map",
            "map_id": 2327906349491137316,
            "name": "box-router-url-map",
            "path_matcher": [],
            "project": "web-searcher-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/web-searcher-2026/global/urlMaps/box-router-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.router_ip",
            "google_compute_address.runner_ips",
            "google_compute_backend_service.router",
            "google_compute_health_check.router",
            "google_compute_instance.router",
            "google_compute_instance.runner",
            "google_compute_instance_group.router_group",
            "google_compute_network.vpc",
            "google_compute_security_policy.router_policy",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}